# ple7-apps

./: .gitignore  README.md
.github/workflows/: build-desktop.yml
android/: README.md
desktop/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
desktop/src/: App.tsx  styles.css
desktop/src-tauri/: Cargo.toml  build.rs  entitlements.plist  ple7.exe.manifest  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/helper/: Cargo.toml  com.ple7.vpn.helper.plist
desktop/src-tauri/helper/src/: main.rs
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/resources/: com.ple7.vpn.helper.plist  ple7-helper
desktop/src-tauri/src/: api.rs  config.rs  helper_client.rs  lib.rs  main.rs  stun.rs  tun_device.rs  tunnel.rs  websocket.rs  wireguard.rs
desktop/src/components/: Dashboard.tsx  Login.tsx  PleiadesLogo.tsx
docs/checkpoints/: checkpoint-2025-12-05-0930-UTC.md
ios/: CLAUDE.md  README.md  project.yml
ios/PLE7/: Info.plist  PLE7.entitlements
ios/PLE7/App/: PLE7App.swift
ios/PLE7/Assets.xcassets/AccentColor.colorset/: Contents.json
ios/PLE7/Assets.xcassets/GoogleLogo.imageset/: Contents.json
ios/PLE7/Models/: Models.swift
ios/PLE7/Services/: APIClient.swift  AuthManager.swift  VPNManager.swift
ios/PLE7/ViewModels/: NetworksViewModel.swift
ios/PLE7/Views/: AccountView.swift  ContentView.swift  DashboardView.swift  HomeView.swift  LoginView.swift  MainTabView.swift  MainView.swift  NetworkDetailView.swift  TopologyView.swift
ios/PacketTunnel/: Info.plist  PacketTunnel.entitlements  PacketTunnelProvider.swift
ios/Shared/: Constants.swift  WireGuardTypes.swift
