[package]
name = "ple7-desktop"
version = "0.3.46"
description = "PLE7 Desktop VPN Client"
authors = ["PLE7"]
edition = "2021"

[lib]
name = "ple7_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "sync", "net", "time", "io-util"] }
tokio-util = { version = "0.7", features = ["codec"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
boringtun = { version = "0.6", default-features = false }
base64 = "0.22"
x25519-dalek = { version = "=2.0.0-rc.3", features = ["static_secrets"] }
rand = "0.8"
thiserror = "1"
log = "0.4"
env_logger = "0.11"

# STUN for NAT traversal
stun_codec = "0.3"
bytecodec = "0.4"

# WebSocket for real-time peer updates
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"

# Networking
socket2 = "0.5"
parking_lot = "0.12"
dashmap = "6"
bytes = "1"

# IP/Network handling
ipnet = "2"
smoltcp = { version = "0.11", default-features = false, features = ["medium-ip", "proto-ipv4", "socket-udp", "socket-icmp"] }

# Async utilities
async-trait = "0.1"

# Image decoding for tray icon
image = { version = "0.25", default-features = false, features = ["png"] }
futures = "0.3"
crossbeam-channel = "0.5"

# Platform-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
tun = { version = "0.7", features = ["async"] }
nix = { version = "0.29", features = ["net", "ioctl"] }

[target.'cfg(target_os = "windows")'.dependencies]
wintun = "0.5"
windows = { version = "0.58", features = ["Win32_NetworkManagement_IpHelper", "Win32_Networking_WinSock"] }

[target.'cfg(target_os = "macos")'.dependencies]
tun = { version = "0.7", features = ["async"] }
libc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
