[package]
name = "ple7-helper"
version = "0.3.13"
description = "PLE7 VPN Privileged Helper Daemon"
authors = ["PLE7"]
edition = "2021"

[[bin]]
name = "ple7-helper"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full", "net", "io-util", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
tun = { version = "0.7", features = ["async"] }
libc = "0.2"
thiserror = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
