[package]
name = "ple7-helper"
version = "0.3.36"
description = "PLE7 VPN Privileged Helper Daemon"
authors = ["PLE7"]
edition = "2021"

[[bin]]
name = "ple7-helper"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
libc = "0.2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
